--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   bucket_path: "dockerhub"
   on:
     branch: master
-  access_Key_id: $AWS_ACCESS_KEY
+  access_key_id: $AWS_ACCESS_KEY
   secre_access_key:
     secure: "$AWS_SECRET_KEY"
 
