--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ deploy:
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secre_access_key:
+  secret_access_key:
     secure: "$AWS_SECRET_KEY"
 
   
